# HoopsQuant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml
backend/: .env.example  database.py  features.py  main.py  models.py  nba_client.py  odds_api_client.py  plot_elo.py  pyproject.toml  requirements.txt  run_incremental_odds_fetch.sh  seed.py  train.py  train2.py
backend/app/: config.py  constants.py  dependencies.py  main.py  middleware.py
backend/app/api/routes/: arbitrage.py  dashboard.py  elo.py  games.py  (+2 more)
backend/app/db/: database.py  migrations.py  models.py
backend/app/ml/: features.py
backend/app/services/: predictions.py
backend/data/raw/: historicalOdds.txt
backend/database/: database.py
backend/experiments/: train3.py
backend/jobs/: fetch_current_odds.py  generate_predictions.py  nba_client.py  nba_fetcher.py  nba_fetcher_2026.py  odds_api_client.py  odds_fetcher.py  odds_schedule.py  odds_tracker.py  scheduler.py
backend/models/: feature_cols.pkl  model.pkl  playoff_feature_cols.pkl  playoff_model.pkl  playoff_scaler.pkl  scaler.pkl
backend/scripts/: features.py  features_2026.py  get_odds_fetch_range.py  odds_profit_check.py  plot_elo.py  run_incremental_odds_fetch.sh  seed_odds_to_supabase.py  seed_supabase.py  train.py  train_2026.py
backend/src/clients/: betclic.py
backend/src/db/: seed.py
backend/testing/: backtest.py  verify_odds.py
backend/tests/: arbitrage_finder.py  backtest.py  conftest.py  test_api.py  test_data_fetching.py  test_elo.py  test_services.py  verify_games.py  verify_odds.py
(+21 files in other folders)
